# Game-Engine-F

./: .clang-format  .clangd  .env.cmake  CMakeLists.txt  README.md  main.cpp  make.bat
shaders/: simple_shader.frag  simple_shader.frag.spv
src/: first_app.cpp  first_app.hpp  gef_device.cpp  gef_device.hpp  gef_pipeline.cpp  gef_pipeline.hpp  gef_swap_chain.cpp  gef_swap_chain.hpp  gef_window.cpp  gef_window.hpp  main.cpp
